<resources>
    <string name="app_name">我的框架</string>
    <string name="activity_remote_service_binding">AppDemo4</string>
    <string name="remote_call_failed">Failure calling remote service</string>

    <string name="partnerHint">"partner"</string>
    <string name="sellerHint">"seller"</string>
    <string name="out_trade_noHint">"out_trade_no"</string>
    <string name="subjectHint">"subject"</string>
    <string name="bodyHint">"body"</string>
    <string name="total_feeHint">"total_fee"</string>
    <string name="notify_urlHint">"notify_url"</string>
    <string name="charsetHint">"charset"</string>
    <string name="signTypeHint">"signType"</string>

    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>

    <string name="title_login">登录</string>
    <string name="user_login_zh_hint">请输入账号</string>
    <string name="user_login_mm_hint">请输入密码</string>
    <string name="txt_register">快速注册</string>
    <string name="txt_reset">找回密码</string>
    <string name="btn_login">登录</string>
    <string name="user_forget_pwd">忘记密码</string>
    <string name="btn_register">快速注册</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_</string>
    <string name="Ensure">"确定"</string>
    <string name="Cancel">"取消"</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="guide_start">1111</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
