<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/common_white"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/icon_login" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_weight="0" />

                        <EditText
                            android:id="@+id/user_tel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/common_white"
                            android:hint="@string/user_login_zh_hint"
                            android:inputType="text"
                            android:maxLength="15"
                            android:textColor="@color/common_black"
                            android:textColorHint="@color/et_hint_color"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/font_small" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/main_bg_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_weight="0" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/user_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginRight="50dp"
                                android:background="@color/common_white"
                                android:digits="@string/filter_vcode"
                                android:hint="@string/user_login_mm_hint"
                                android:inputType="textPassword"
                                android:maxLength="12"
                                android:textColor="@color/common_black"
                                android:textColorHint="@color/et_hint_color"
                                android:textCursorDrawable="@null"
                                android:textSize="@dimen/font_small" />

                            <TextView
                                android:id="@+id/hint_pwd"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical|right"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/hint_pwd"
                                android:padding="10dp" />
                        </FrameLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/main_bg_color" />
                    <Button
                        android:id="@+id/tv_register"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/submit_btn"
                        android:gravity="center"
                        android:minHeight="40dp"
                        android:text="@string/txt_register"
                        android:textColor="@color/btn_grey_tv_color"
                        android:textSize="@dimen/font_large" />
                    <TextView
                        android:id="@+id/user_btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/submit_btn_grey"
                        android:enabled="false"
                        android:gravity="center"
                        android:minHeight="40dp"
                        android:text="@string/btn_login"
                        android:textColor="@color/btn_grey_tv_color"
                        android:textSize="@dimen/font_large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <!--<TextView
                            android:id="@+id/tv_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/txt_register"
                            android:textColor="@color/common_black"
                            android:textSize="@dimen/font_normal15" />-->

                        <TextView
                            android:id="@+id/tv_forget_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/user_forget_pwd"
                            android:textColor="@color/common_black"
                            android:textSize="@dimen/font_normal15" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>